 * Added support for blurring any hard-coded translucency (and not just Konsole) with kwin.
 * Added support for app specific themes (to Kvantum Manager).
 * Added a dark variant of KvArc (KvArcDark).
 * Added a key for overlapping the active tab.
 * Added a key to disable frame expansion for inactive tabs.
 * Added a key for scrollable menus (to Kvantum Manager).

V0.10.2
---------
 * Added a key for drawing scrollbars inside the view frame (thanks to Craig Drummond).
 * Draw the background of scrollbar and scroll corner area appropriately when the scrollbar is inside the view frame.
 * Consider digiKam's DAbstractSliderSpinBox as a KisSliderSpinBox.
 * Added a key for drawing combo popups as menu popups (thanks to Craig).
 * Expand x11drag option to allow finer control (thanks to Craig).
 * Allow bold and italic GroupBox titles (thanks to Craig).
 * Added an Arc like theme.
 * Added a key for drawing tree branch lines (to Kvantum Manager).
 * Added a key for setting the width of horizontal spin buttons (to Kvantum Manager).
 * Global minimum width for push buttons.
 * Center text+icon in push buttons.
 * Added a key for layout margins (thanks to Craig).
 * Support monochrome icon sets that reverse the color of selected icons.
 * Added a hacking key for not tinting selected icons.
 * Added a key for frame patterns.
 * Added support for focus rectangle to comboboxes.
 * Added a key to respect some DE settings (thanks to Craig).
 * Added a theme inspired by Ubuntu's Ambiance.
 * Added a fair copy of Ubuntu's Ambiance.
 * Added an optional section for styling toolbar buttons.
 * Added an optional key for distinguishing between expanded and usual frames.

V0.10.1
---------
 * No label spacing for checkboxes and radiobuttons that have neither text nor icon. 
 * Added a dark cyan theme.
 * State change animation for line-edits and also for spin and combo boxes when they're drawn as line-edits.
 * Quietened compiler warnings with Qt-5.7.